--- a/examples/bot/package.json
+++ b/examples/bot/package.json
@@ -9,8 +9,8 @@
         "start": "node src/index.js"
     },
     "dependencies": {
-        "guilded.js": "^0.5.0",
-        "dotenv": "^16.0.0"
+        "dotenv": "^16.0.0",
+        "guilded.js": "^0.6.0"
     },
     "repository": "https://github.com/guildedjs/guilded.js"
 }
