--- a/examples/command-handler/package.json
+++ b/examples/command-handler/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "@discordjs/collection": "^1.5.1",
         "dotenv": "^16.0.3",
-        "guilded.js": "^0.20.2"
+        "guilded.js": "0.22.2"
     },
     "repository": "https://github.com/guildedjs/guilded.js"
 }
